Changes from 4.3.8 -> 4.3.9 (15 Jul 2012)
=========================================
* rev 7118

* Fix crash when XYMSRV is undefined but XYMSERVERS is
* Fix error in calculating combo-status messages with
  forward references
* Fix error in disable-until-TIME or disable-until-OK code
* Permit building without the RRDtool libraries, e.g. for
  a network-tester build, but with trend-graphing disabled.
* Full compiler-warning cleanup
* Various configuration/build-script issues fixed.

Changes from 4.3.7 -> 4.3.8 (15 Jul 2012)
=========================================
* rev 7082

Bugfixes
* Workaround for DNS timeout handling, now fixed at approximately 25
  seconds.
* "hostinfo" command for xymond documented
* confreport only shows processes that are monitored
* analysis.cfg parsing of COLOR for UP rules was broken
* RRD handlers no longer crash after receiving 1 billion updates
* Using .netrc for authentication could crash xymonnet
* "directory" includes would report the wrong filename for missing
  directories.
* useradm CGI would invoke htpassword twice
* "include" and "directory" now ignores trailing whitespace
* SSLv2 support disabled if SSL-library does not support it
* Minor bugfixes and cleanups of compiler warnings.

Enhancements
* Service status on info page now links to the detailed status page.
* Add RRDGRAPHOPTS setting to permit global user-specified RRD options,
  e.g. for font to showgraph CGI
* Add check for the size of public keys used in SSL certificates
  (enabled via --sslkeysize=N option for xymonnet)
* Optionally disable the display of SSL ciphers in the sslcert status
  (the --no-cipherlist option for xymonnet)
* Improved build-scripts works on newer systems with libraries in
  new and surprising places
* Reduce xymonnet memory usage and runtime for ping tests when there
  are multiple hosts.cfg entries with the same IP-address.
* Add code for inode-monitoring on Linux. Does not currently work on
  any other client platform.