@@ -75,9 +75,9 @@ The possible options are:
 The COLORNAME parameter is the color of the alert: red, yellow or purple.
 <BR>
 
-<B>--duration=SECONDS</B>
+<B>--duration=MINUTES</B>
 
-The SECONDS parameter is the duration of the alert in seconds. 
+The MINUTES parameter is the duration of the alert in minutes. 
 <BR>
 
 <B>--group=GROUPNAME</B>
@@ -192,6 +192,6 @@ out email alerts.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 15:49:57 GMT, July 24, 2012
+Time: 16:17:34 GMT, July 24, 2012
 </BODY>
 </HTML>
