@@ -52,8 +52,8 @@ The possible options are:
 .BI "--color=COLORNAME"
 The COLORNAME parameter is the color of the alert: red, yellow or purple.
 .br
-.BI "--duration=SECONDS"
-The SECONDS parameter is the duration of the alert in seconds. 
+.BI "--duration=MINUTES"
+The MINUTES parameter is the duration of the alert in minutes. 
 .br
 .BI "--group=GROUPNAME"
 The GROUPNAME paramater is a groupid string from the analysis.cfg
